manifests/deployment.yml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: sample-web-deployment
  namespace: web-dmz
spec: 
  selector: 
    matchLabels: 
      app: sample-web
  replicas: 1
  template: 
    metadata: 
      labels: 
        app: sample-web
    spec: 
      containers: 
      - name: sample-web
        image: nginx
        ports: 
        - containerPort: 80
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 20
        startupProbe:
          tcpSocket:
            port: 80
          failureThreshold: 15
          periodSeconds: 10
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "200m"
