manifests/mysql-deployment-with-secret.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-mysql-deployment
  namespace: web-dmz
spec:
  selector:
    matchLabels:
      app: sample-mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: sample-mysql
    spec:
      containers:
      - name: sample-mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
        readinessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 60
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 60
          periodSeconds: 20
        startupProbe:
          tcpSocket:
            port: 3306
          failureThreshold: 15
          periodSeconds: 10
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "200m"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key:  eks.amazonaws.com/nodegroup
                operator: In
                values:
                - dev_eks_1_NG_private
      dnsPolicy: ClusterFirst
