manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-web-ingress
  namespace: web-dmz
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: a51c2cbbb4a42439f815f873ecf3f5ee-9de83b1c56da12eb.elb.ap-southeast-1.amazonaws.com
    http:
      paths:
      - path: /sample-web(/|$)(.*)
        backend:
          serviceName: sample-web-service
          servicePort: 80
